@@ -28,7 +28,6 @@ class openbenchmarking_repositories implements pts_option_interface
 	public static function run($r)
 	{
 		echo PHP_EOL . 'Linked OpenBenchmarking.org Repositories:' . PHP_EOL . PHP_EOL;
-
 		foreach(pts_openbenchmarking::linked_repositories() as $repo)
 		{
 			if($repo == 'local')
